# Simple-text-Search-engine

./: .gitignore  Cargo.toml  README.md  sonar-project.properties
Dataset/: me.txt  output.txt
compile/: Cargo.toml
compile/src/: error.rs  lib.rs  main.rs
data_structs/src/: trees.rs
data_structs/src/trees/: ngram.rs  suffix.rs  trie.rs
runtime/: Cargo.toml
runtime/benches/: benchmark_search.rs
runtime/src/: lib.rs  main.rs
src/: logic.rs  main.rs
src/logic/: search_logic.rs
