[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
default-run = "runtime"

[dependencies]
rand = "^0.8.5"
chrono = "0.4"
tui = { package = "ratatui", version = "0.23.0", features = ["all-widgets"]}
crossterm = "0.29.0"
clap = { version = "4", features = ["derive"] }
data_structs = { path = "../data_structs"}
unicode-segmentation = "1.12.0"
levenshtein = "=1.0.5"
serde_json = "1.0"
bincode = "2.0.1"
colored = "2.0"
serde = "1.0"
# include dependencies needed to read serialized.bin, etc.
